# git-spark-etl

./: README.md
jira-spark-etl-master/: config.py  pyproject.toml  requirements.txt
jira-spark-etl-master/jira_database_etl/: __init__.py  csvToDataframeApp.py  db.py  jirafetch.py  transform.py
